samples/_failures_safe/1761713540_bc2df1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3a20ecb.c: In function ‘main’:
./samples/SAFE/__tmp_a3a20ecb.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("\n");
      |     ^~~~~~
